--- a/app/src/main/res/layout/home_post_tab_fragment.xml
+++ b/app/src/main/res/layout/home_post_tab_fragment.xml
@@ -16,8 +16,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
