--- a/app/src/main/res/layout/activity_subreddit.xml
+++ b/app/src/main/res/layout/activity_subreddit.xml
@@ -26,13 +26,14 @@
         android:id="@+id/my_info"
         layout="@layout/header_info_subreddit"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
+        app:layout_constraintBottom_toTopOf="@+id/include_filters"
         bind:subredditData="@{subreddit}"/>
 
     <include
-        android:id="@+id/include4"
+        android:id="@+id/include_filters"
         layout="@layout/list_filters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include4" />
+        app:layout_constraintTop_toBottomOf="@+id/include_filters" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
