--- a/app/src/main/res/layout/home_tab_post_item.xml
+++ b/app/src/main/res/layout/home_tab_post_item.xml
@@ -82,6 +82,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
+        android:visibility="gone"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,14 +95,14 @@
         android:layout_marginTop="8dp"
         style="@style/SecondaryButtonStyleSmall"
         android:background="@drawable/button_background_blue"
-        android:visibility="gone"
         android:text="Go to redirection"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/postIcon"
         app:layout_constraintTop_toBottomOf="@+id/content"
         />
 
     <WebView
-        android:id="@+id/video_view"
+        android:id="@+id/media_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -111,5 +112,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/redirect_button" />
+
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/redirect_button"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
