--- a/app/src/main/res/layout/home_tab_post_item.xml
+++ b/app/src/main/res/layout/home_tab_post_item.xml
@@ -82,7 +82,6 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
-        android:visibility="gone"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,24 +92,25 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="8dp"
+        android:visibility="gone"
         style="@style/SecondaryButtonStyleSmall"
         android:background="@drawable/button_background_blue"
         android:text="@string/post_redirection_button_default"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/postIcon"
         app:layout_constraintTop_toBottomOf="@+id/content"
         />
 
     <WebView
         android:id="@+id/media_view"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="0dp"
+        android:layout_height="250dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/redirect_button" />
 
     <ImageView
