--- a/app/src/main/res/layout/header_info_post.xml
+++ b/app/src/main/res/layout/header_info_post.xml
@@ -54,6 +54,7 @@
         app:layout_constraintTop_toBottomOf="@+id/subreddit_title" />
 
     <TextView
+        android:id="@+id/post_utc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="00:00 00/00/0000"
