--- a/app/src/main/res/layout/activity_post_page.xml
+++ b/app/src/main/res/layout/activity_post_page.xml
@@ -29,4 +29,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/information" />
 
+    <include layout="@layout/loading_container" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
