feat(post page): update post content display

--- a/app/src/main/res/layout/fragment_post_content.xml
+++ b/app/src/main/res/layout/fragment_post_content.xml
@@ -2,60 +2,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginBottom="10dp"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:layout_marginBottom="10dp"
+    android:orientation="vertical"
     tools:context=".fragment.PostContentFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:textStyle="bold"
-        style="@style/SmallTitleTextStyle"
         android:id="@+id/post_title"
+        style="@style/SmallTitleTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="POST TITLE" />
+        android:text="POST TITLE"
+        android:textStyle="bold" />
+
     <Button
-        android:id="@+id/post_redirect_button"
+        android:id="@+id/redirect_button"
+        style="@style/SecondaryButtonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="8dp"
-        android:visibility="gone"
-        style="@style/SecondaryButtonStyleSmall"
         android:background="@drawable/button_background_blue"
         android:text="@string/post_redirection_button_default"
-    />
-    <WebView
-        android:id="@+id/post_media_view"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:id="@+id/media_view_container"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="300dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
+        android:orientation="vertical"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_redirect_button" />
+        >
+
+        <WebView
+            android:id="@+id/media_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
     <ImageView
-        android:id="@+id/post_picture"
+        android:id="@+id/picture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
+        android:maxHeight="300dp"
         android:visibility="gone"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
     <TextView
         android:id="@+id/post_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="POST CONTENT HERE"
-        android:scrollbars = "vertical"/>
+        android:scrollbars="vertical"
+        android:text="POST CONTENT HERE" />
 
 </LinearLayout>
