--- a/app/src/main/res/layout/header_info_subreddit.xml
+++ b/app/src/main/res/layout/header_info_subreddit.xml
@@ -1,67 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
+
         <variable
             name="subredditData"
             type="my.epi.redditech.model.api.SubredditModel" />
     </data>
 
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="@layout/activity_subreddit">
-
-    <TextView
-        android:id="@+id/subreddit_title"
-        style="@style/SubtitleTextStyle"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@{subredditData.display_name_prefixed}"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        />
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/subreddit_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/subreddit_title">
+        tools:showIn="@layout/activity_subreddit">
 
         <TextView
-            android:id="@+id/header_nb_subscribers"
-            style="@style/DescriptionStyle"
+            android:id="@+id/subreddit_title"
+            style="@style/SubtitleTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:text="@{subredditData.display_name_prefixed}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            android:text="@string/subreddit_header_def_nb_subscribers" />
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="@+id/subreddit_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/subreddit_title">
+
+            <TextView
+                android:id="@+id/header_nb_subscribers"
+                style="@style/DescriptionStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:text="@string/subreddit_header_def_nb_subscribers" />
+
+            <TextView
+                style="@style/DescriptionStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nb_subscriber_label" />
+
+        </LinearLayout>
 
         <TextView
+            android:id="@+id/subreddit_desc"
             style="@style/DescriptionStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/nb_subscriber_label" />
+            android:layout_marginTop="5dp"
+            android:text="@{subredditData.public_description}"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+            app:layout_constraintStart_toStartOf="@+id/subreddit_title"
+            app:layout_constraintTop_toBottomOf="@+id/subreddit_title" />
 
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/subreddit_desc"
-        style="@style/DescriptionStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="@{subredditData.public_description}"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
-        app:layout_constraintStart_toStartOf="@+id/subreddit_title"
-        app:layout_constraintTop_toBottomOf="@+id/subreddit_title" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
