--- a/app/src/main/res/layout/header_info_subreddit.xml
+++ b/app/src/main/res/layout/header_info_subreddit.xml
@@ -17,15 +17,23 @@
         tools:showIn="@layout/activity_subreddit">
 
         <TextView
+            android:id="@+id/subreddit_name_title"
+            style="@style/TitleTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{subredditData.title}"
+            app:layout_constraintStart_toStartOf="@+id/subreddit_title"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/subreddit_title"
             style="@style/SubtitleTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
             android:text="@{subredditData.display_name_prefixed}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/subreddit_name_title" />
 
         <LinearLayout
             android:id="@+id/linearLayout2"
@@ -58,7 +66,6 @@
             style="@style/DescriptionStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:text="@{subredditData.public_description}"
             app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
             app:layout_constraintStart_toStartOf="@+id/subreddit_title"
