feat(pagination): infinite scroll on subreddit home page post list

--- a/app/src/main/res/layout/activity_subreddit.xml
+++ b/app/src/main/res/layout/activity_subreddit.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bind="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="subreddit"
             type="my.epi.redditech.model.api.SubredditModel" />
     </data>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.SubredditActivity"
@@ -19,17 +18,17 @@
     <include
         android:id="@+id/header"
         layout="@layout/header_subreddit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        bind:layout_constraintStart_toStartOf="parent"
+        bind:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/my_info"
         layout="@layout/header_info_subreddit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header"
-        app:layout_constraintBottom_toTopOf="@+id/include_filters"
+        bind:layout_constraintStart_toStartOf="parent"
+        bind:layout_constraintTop_toBottomOf="@+id/header"
+        bind:layout_constraintBottom_toTopOf="@+id/include_filters"
         bind:subredditData="@{subreddit}"/>
 
     <include
@@ -37,21 +36,22 @@
         layout="@layout/list_filters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_info" />
+        bind:layout_constraintEnd_toEndOf="parent"
+        bind:layout_constraintTop_toBottomOf="@+id/my_info" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include_filters" />
+        android:scrollbars="vertical"
+        bind:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        bind:layout_constraintBottom_toBottomOf="parent"
+        bind:layout_constraintEnd_toEndOf="parent"
+        bind:layout_constraintStart_toStartOf="parent"
+        bind:layout_constraintTop_toBottomOf="@+id/include_filters" />
 
-    <include layout="@layout/loading_container" />
-
+    <include
+        layout="@layout/loading_container" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
