--- a/app/src/main/res/layout/header_info_subreddit.xml
+++ b/app/src/main/res/layout/header_info_subreddit.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{subredditData.title}"
+            android:layout_marginTop="5dp"
             app:layout_constraintStart_toStartOf="@+id/subreddit_title"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,6 +40,7 @@
             android:id="@+id/linearLayout2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="@+id/subreddit_title"
