--- a/app/src/main/res/layout/fragment_post_content.xml
+++ b/app/src/main/res/layout/fragment_post_content.xml
@@ -10,6 +10,18 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/post_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:text="POST TYPE"
+        android:visibility="gone"
+        android:background="@color/black"
+        android:textColor="@color/white" />
+
+    <TextView
         android:id="@+id/post_title"
         style="@style/SmallTitleTextStyle"
         android:layout_width="match_parent"
