--- a/app/src/main/res/layout/home_tab_post_item.xml
+++ b/app/src/main/res/layout/home_tab_post_item.xml
@@ -47,6 +47,7 @@
         app:layout_constraintTop_toTopOf="@+id/postIcon" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -74,6 +75,22 @@
             android:text="u/simon"
             android:textAppearance="?attr/textAppearanceListItem" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/post_type"
+        style="@style/MiniBlackStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="5dp"
+        android:textStyle="bold"
+        android:text="POST TYPE"
+        android:visibility="gone"
+        android:background="@color/black"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"/>
 
     <LinearLayout
         android:layout_width="match_parent"
